[package]
edition = "2018"
name = "rldp"
version = "0.1.35"
description = "RLDP library"

[dependencies]
async-trait = "0.1"
base64 = "0.11"
dashmap = "4.0"
failure = "0.1"
log = "0.4"
rand = "0.7"
tokio = { version = "1.6", features = ["rt-multi-thread"] }

raptorq = { git = "https://github.com/Rexagon/raptorq" }
lockfree = { git = "https://github.com/tonlabs/lockfree.git" }
ton_api = { git = "https://github.com/broxus/ton-labs-tl.git", package = "ton_api", branch = "original", default-features = false }
adnl = { git = "https://github.com/broxus/ton-labs-adnl", default-features = false, features = ["node"] }
ton_types = { git = "https://github.com/tonlabs/ton-labs-types.git" }
