[package]
edition = "2018"
build = "./common/build/build.rs"
name = "rldp"
version = "0.1.35"
description = "RLDP library"

[dependencies]
async-trait = "0.1.22"
base64 = "0.11.0"
failure = "0.1.6"
log = "0.4.8"
rand = "0.7.2"
raptorq = { git = "https://github.com/Rexagon/raptorq" }
tokio = { version = "1.3.0", features = ["rt-multi-thread"] }

lockfree = { git = "https://github.com/tonlabs/lockfree.git" }
ton_api = { git = "https://github.com/tonlabs/ton-labs-tl.git", package = "ton_api" }
adnl = { git = "https://github.com/tonlabs/ton-labs-adnl", features = ["node"] }
ton_types = { git = "https://github.com/tonlabs/ton-labs-types.git" }

[features]
telemetry = []

